# OffensiveRust

./: .gitignore  .gitmodules  README.md  cargo.toml
Allocate_With_Syscalls/: Cargo.toml
Allocate_With_Syscalls/src/: main.rs
Create_DLL/: Cargo.toml
Create_DLL/src/: lib.rs
DeviceIoControl/: Cargo.toml
DeviceIoControl/src/: main.rs
EnableDebugPrivileges/: Cargo.toml
EnableDebugPrivileges/src/: main.rs
Exec_Shellcode_In_Memory/src/: main.rs
Execute_Without_Create_Process/: Cargo.toml
Execute_Without_Create_Process/src/: main.rs
ImportedFunctionCall/: Cargo.toml
ImportedFunctionCall/src/: main.rs
Injection_AES_Loader/: Cargo.toml
Injection_AES_Loader/src/: main.rs
Injection_Rc4_Loader/: Cargo.toml
Injection_Rc4_Loader/src/: main.rs
Kernel_Driver_Exploit/: Cargo.toml
Kernel_Driver_Exploit/src/: main.rs
Litcrypt_String_Encryption/: Cargo.toml  README.md
Litcrypt_String_Encryption/src/: main.rs
Named_Pipe_Client/: Cargo.toml
Named_Pipe_Client/src/: main.rs
Named_Pipe_Server/: Cargo.toml
Named_Pipe_Server/src/: main.rs
PEB_Walk/: Cargo.toml
PEB_Walk/src/: main.rs  types.rs
Process_Injection_CreateRemoteThread/: Cargo.toml
Process_Injection_CreateThread/: Cargo.toml
Process_Injection_CreateThread/src/: main.rs
Process_Injection_Self_EnumSystemGeoID/: Cargo.toml
Process_Injection_Self_EnumSystemGeoID/src/: main.rs
Process_Injection_asm/: Cargo.toml
Process_Injection_asm/src/: main.rs
Process_Injection_create_fiber/: Cargo.toml
Process_Injection_create_fiber/src/: main.rs
Process_Injection_create_thread_native/: Cargo.toml
Process_Injection_create_thread_native/src/: main.rs
Process_Injection_etwp_create_etw_thread/: Cargo.toml
Process_Injection_etwp_create_etw_thread/src/: main.rs
Process_Injection_nt_queue_apc_thread_ex_local/: Cargo.toml
Process_Injection_nt_queue_apc_thread_ex_local/src/: main.rs
Process_Injection_rtl_create_user_thread/: Cargo.toml
Process_Injection_rtl_create_user_thread/src/: main.rs
Shellcode_Local_inject/: Cargo.toml
UUID_Shellcode_Execution/: Cargo.toml
UUID_Shellcode_Execution/bindings/: Cargo.toml  build.rs
UUID_Shellcode_Execution/src/: main.rs
Unhooking/: Cargo.toml
Unhooking/src/: main.rs
amsi_bypass/: Cargo.toml
amsi_bypass/src/: main.rs
apihooking/: Cargo.toml
apihooking/src/: main.rs
asm_syscall/: Cargo.toml
asm_syscall/src/: main.rs
base64_system_enum/: Cargo.toml
base64_system_enum/src/: main.rs
dllinjection/: Cargo.toml
dllinjection/src/: main.rs
http-https-requests/: Cargo.toml
http-https-requests/src/: main.rs
is_it_hooked/: Cargo.toml
is_it_hooked/src/: main.rs
keyboard_hooking/: Cargo.toml
keyboard_hooking/src/: main.rs
memN0ps/arsenal-rs/: README.md
memN0ps/arsenal-rs/dll_injector_classic-rs/: Cargo.toml  README.md
memN0ps/arsenal-rs/dll_injector_classic-rs/inject/: Cargo.toml
memN0ps/arsenal-rs/dll_injector_classic-rs/inject/src/: main.rs
memN0ps/arsenal-rs/dll_injector_classic-rs/testdll/: Cargo.toml
memN0ps/arsenal-rs/dll_injector_classic-rs/testdll/src/: lib.rs
memN0ps/arsenal-rs/module_stomping-rs/: Cargo.toml  README.md
memN0ps/arsenal-rs/module_stomping-rs/src/: main.rs
memN0ps/arsenal-rs/process_hollowing-rs/: Cargo.toml  README.md
memN0ps/arsenal-rs/process_hollowing-rs/src/: main.rs
memN0ps/arsenal-rs/rdi-rs/reflective_loader/: Cargo.toml
memN0ps/arsenal-rs/rdi-rs/reflective_loader/src/: lib.rs  loader.rs
memN0ps/arsenal-rs/shellcode_runner_classic-rs/: Cargo.toml  README.md
memN0ps/arsenal-rs/shellcode_runner_classic-rs/src/: main.rs
memN0ps/eagle-rs/: .gitignore  Cargo.toml  README.md
memN0ps/eagle-rs/client/: Cargo.toml
memN0ps/eagle-rs/client/src/: kernel_interface.rs  main.rs
memN0ps/eagle-rs/common/: Cargo.toml
memN0ps/eagle-rs/common/src/: lib.rs
memN0ps/eagle-rs/driver/: Cargo.toml  Makefile.toml  build.rs
memN0ps/eagle-rs/driver/.cargo/: config.toml
memN0ps/eagle-rs/driver/src/: lib.rs
memN0ps/eagle-rs/driver/src/callbacks/: mod.rs
memN0ps/eagle-rs/driver/src/dse/: mod.rs
memN0ps/eagle-rs/driver/src/includes/: mod.rs
memN0ps/eagle-rs/driver/src/process/: hide.rs  memory.rs  mod.rs
memN0ps/eagle-rs/driver/src/string/: mod.rs
memN0ps/eagle-rs/driver/src/token/: mod.rs
memN0ps/ekko-rs/: Cargo.toml  README.md
memN0ps/ekko-rs/src/: ekko.rs  main.rs
memN0ps/mimiRust/: .gitignore  Cargo.toml  README.md
memN0ps/mimiRust/.cargo/: config
memN0ps/mimiRust/src/: main.rs
memN0ps/mimiRust/src/lateral_movement/: mod.rs
memN0ps/mimiRust/src/lateral_movement/kerberos/: mod.rs
memN0ps/mimiRust/src/lateral_movement/pth/: mod.rs
memN0ps/mimiRust/src/lateral_movement/scm/: mod.rs
memN0ps/mimiRust/src/passwords/: mod.rs
memN0ps/mimiRust/src/passwords/ntlm/: mod.rs
memN0ps/mimiRust/src/passwords/wdigest/: mod.rs
memN0ps/mimiRust/src/privilege/: mod.rs
memN0ps/mimiRust/src/utilities/: mod.rs
memN0ps/mmapper-rs/: README.md
memN0ps/mmapper-rs/loader/: Cargo.toml
memN0ps/mmapper-rs/loader/src/: lib.rs  main.rs
memN0ps/mordor-rs/: README.md
memN0ps/mordor-rs/freshycalls_syswhispers/: Cargo.toml
memN0ps/mordor-rs/freshycalls_syswhispers/src/: lib.rs  obf.rs  syscall.rs  syscall_resolve.rs
memN0ps/mordor-rs/freshycalls_syswhispers/tests/: syscaller.rs
memN0ps/mordor-rs/hells_halos_tartarus_gate/: Cargo.toml
memN0ps/mordor-rs/hells_halos_tartarus_gate/src/: lib.rs
memN0ps/pemadness-rs/: README.md
memN0ps/psyscalls-rs/: README.md
memN0ps/srdi-rs/: .gitignore  Cargo.toml  Makefile.toml  README.md
memN0ps/srdi-rs/generate_shellcode/: Cargo.toml
memN0ps/srdi-rs/generate_shellcode/src/: main.rs
memN0ps/srdi-rs/reflective_loader/: Cargo.toml
memN0ps/srdi-rs/reflective_loader/src/: lib.rs
memN0ps/srdi-rs/testdll/: Cargo.toml
memN0ps/srdi-rs/testdll/src/: lib.rs
memfd_create/: Cargo.toml  README.md
memfd_create/src/: bar.c  (+1 more)
patch_etw/: Cargo.toml
ppid_spoof/: Cargo.toml
ppid_spoof/src/: main.rs
tcp_ssl_client/: Cargo.toml
tcp_ssl_server/: Cargo.toml
token_manipulation/: Cargo.toml
wmi_execute/: Cargo.toml
(+21 files in other folders)
