[package]
name = "Injection_AES_Loader"
version = "0.1.0"
edition = "2021"
author = "trickster0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntapi = "0.3.6"
reqwest = {version = "0.11.4", features = ["blocking"]}
winapi = {version = "0.3.9", features = ["wincon"]}
libaes = "0.6.1"
