[package]
name = "dllinjection"
version = "0.1.0"
authors = ["Idov31 <github.com/idov31>"]
edition = "2021"

[[bin]]
name = "dllinjection"
path = "src/main.rs"

[dependencies]
winapi = {version = "0.3.9", features = ["processthreadsapi", "memoryapi", "handleapi", "libloaderapi", "psapi"]}
win32-error = "0.9.0"