[package]
name = "mimiRust"
version = "0.1.0"
edition = "2018"

[dependencies]
winapi = { version = "0.3", features = ["bcrypt", "winnt", "minwindef", "ntdef", "libloaderapi", "psapi", "securitybaseapi", "tlhelp32", "processthreadsapi", "handleapi"] }
winreg = "0.10.1"
kernel32-sys = "0.2.2"
memsec = "0.6.0"
libc = "0.2.15"
byteorder = "1.4.3"
sysinfo = "0.15.3"
anyhow = "1.0"
aes = "0.7.5"
block-modes = "0.8.1"
des = "0.0.2"
regex = "1.5.4"
clap = { version = "3.0.5", features = ["derive"] }
whoami = "1.2.1"
md-5 = "0.10.1"
console = "0.15.0"

[profile.release]
panic = 'abort'
lto = true
opt-level = "z"