[package]
name = "shellcode_runner_classic-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.20.4"
ntapi = "0.3.6"
winapi = { version = "0.3.8", features = ["ntdef", "ntstatus", "impl-default", "basetsd"] }
libaes = "0.6.1"
