[package]
name = "driver"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
ntapi = { version = "0.3.7", default-features = false}
log = "0.4.16"
bstr = { version = "0.2.17", default-features = false}
kernel-log = "0.1.1"
kernel-print = "0.1.0"
kernel-alloc = "0.1.0"
obfstr = "0.3.0"
modular-bitfield = "0.11.2"
common = { path = "../common" }

[dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = [
    "wdm",
    "ntstatus",
]

[build-dependencies]
winreg = "0.10.1"
failure = "0.1.8"